--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ sx127x_lora = "0.3.1"
 rppal = { git = "https://github.com/golemparts/rppal.git", features = [
     "hal",
 ], rev = "c237b481bf763f76b10328dfbd4edf543e9907f6" }
+ansi_term = "0.12.1"
