--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,14 @@ edition = "2021"
 linux-embedded-hal = "0.3.2"
 mavlink = "0.12.2"
 sx127x_lora = "0.3.1"
-rppal = { git = "https://github.com/golemparts/rppal.git", features = [
-    "hal",
-], rev = "c237b481bf763f76b10328dfbd4edf543e9907f6" }
+rppal = { path = "../rppal", features = ["hal"] }
 ansi_term = "0.12.1"
+lora-phy = { git = "https://github.com/lora-rs/lora-rs.git", rev = "d86786988a4a446963d1e85e3ab99a225734cedd" }
+tokio = { version = "1", features = ["full"] }
+embedded-hal-bus = { version = "0.1.0-rc.2", features = ["async", "std"] }
+embedded-hal = { version = "=1.0.0-rc.2" }
+embedded-hal-async = { version = "=1.0.0-rc.2" }
+embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = [
+    "unproven",
+] }
+futures = "0.3.29"
