Add logging utilities and copy_logs.sh script

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,13 @@ embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = [
     "unproven",
 ] }
 futures = "0.3.29"
+# For Logging
+chrono = "0.4.31"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3.1", features = [
+    "fmt",
+    "env-filter",
+    "json",
+] }
+regex = { version = "1", features = ["unicode-case"] }
+tracing-appender = "0.2.3"
