--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,17 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-linux-embedded-hal = "0.3.2"
 mavlink = { version = "0.12.2", features = ["serde"] }
-
-sx127x_lora = "0.3.1"
 rppal = { path = "../rppal", features = ["hal"] }
-lora-phy = { git = "https://github.com/lora-rs/lora-rs.git", rev = "d86786988a4a446963d1e85e3ab99a225734cedd" }
-tokio = { version = "1", features = ["full"] }
-embedded-hal-bus = { version = "0.1.0-rc.2", features = ["async", "std"] }
-embedded-hal = { version = "=1.0.0-rc.2" }
-embedded-hal-async = { version = "=1.0.0-rc.2" }
-embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = [
+lora-phy = { git = "https://github.com/lora-rs/lora-rs.git", rev = "258ce4bbcb2e71075e52db91f4600f43641059b3" }
+tokio = { version = "1.15", features = ["full", "tracing"] }
+embedded-hal-bus = { version = "0.1.0", features = ["async", "std"] }
+embedded-hal = { version = "1" }
+embedded-hal-async = { version = "1" }
+embedded-hal-02 = { package = "embedded-hal", version = "0.2.7", features = [
     "unproven",
 ] }
 futures = "0.3.29"
@@ -32,3 +29,4 @@ regex = { version = "1", features = ["unicode-case"] }
 tracing-appender = "0.2.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+console-subscriber = "0.2.0"
