--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,5 @@ tracing-appender = "0.2.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 console-subscriber = "0.2.0"
+tokio-tungstenite = "0.21.0"
+futures-util = "0.3.30"
